--- a/leraar.html
+++ b/leraar.html
@@ -56,7 +56,7 @@
                 }
                 
                 $scope.ResetBord = function() {
-                    OplossingService.query({Id:3546,kindId:0});
+                    OplossingService.query({Id:3546,KindId:0,OefeningId:0});
                 }
                 
                 $scope.ResetKids = function(Id) {
@@ -75,9 +75,9 @@
             {{data[0].Vraag}}
             <button type="button" class="btn btn-nav" ng-click="GetNext()">volgende</button> <br/>
             Antwoord: {{data[0].Resultaat}}<br/>
-            <button type="button" ng-click="SetOefeningTrue()">Toon Oefening</button><br/>
+            <button type="button" ng-click="SetOefeningTrue()">Toon Oefening</button>
             <button type="button" ng-click="ResetOefening()">Reset Oefening</button><br/>
-            <button type="button" ng-click="ResetBord()">Reset Bord</button><br/>
+            <button type="button" ng-click="ResetBord()">Reset Bord</button>
             <button type="button" ng-click="ResetKids(0)">Reset Kids</button><br/>
             Id = {{currentId}}<br/>
         </div>
